tried to fix z-index

--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -3,7 +3,7 @@
 
 
 .bottomNav{
-    z-index: 3;
+    z-index: 999;
     width: 100%;
     //flex: display;
     justify-content: center;
